# nintendo-today-scripts

./: .gitignore  LICENSE  README.md  README.me  all_news.py  auth.py  get_calendar_videos.py  get_feed.py  get_page.py  nintendical.py  pyproject.toml  requirements.txt  shell.nix
